Fix header heading alignment

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 
@@ -90,7 +91,6 @@ header {
 
 .heading {
   text-align: center;
-  width: 606px;
   display: flex;
   flex-direction: column;
   align-items: center;
